Remove --limit-fps flag.

The flag was added for experimenting with power usage and doesn't appear
used anymore. It's also broken with OOP-D enabled.

Bug: 899300
Change-Id: Id255ce74d252f15346affb34417b883b37fe5987
Reviewed-on: https://chromium-review.googlesource.com/c/1305244
Reviewed-by: danakj <danakj@chromium.org>
Commit-Queue: kylechar <kylechar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603929}
Former-commit-id: 7c62990ade547e536439b34a278c6369ef1c8582